<resources>
    <string name="app_name">My Budget App</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="category_default">Category</string>
    <string name="category_home">Home</string>
    <string name="category_health">Health</string>
    <string name="category_groceries">Groceries</string>
    <string name="category_transport">Transportation</string>
    <string name="category_leisure">Leisure</string>
    <string name="category_work">Work</string>
    <string name="category_education">Education</string>
    <string name="account_cash">Cash</string>
    <string name="account_checking">Checking Account</string>
    <string name="account_savings">Savings</string>
    <string name="initial_1">1</string>
    <string name="initial_value" translatable="false">$0.00</string>
    <string name="initial_value_no_symbol" translatable="false">0.00</string>
    <string name="initial_percent" translatable="false">0%</string>
    <string name="initial_year">2023</string>
    <string name="initial_month">January</string>
    <string name="currency_symbol">$</string>
    <string name="initial_billing_day">Billing day: 1</string>
    <string name="test_february">February</string>
    <string name="test_monday_2">Monday, 2</string>
    <string name="nav_home">Home</string>
    <string name="nav_accounts">Accounts</string>
    <string name="nav_income">Income</string>
    <string name="nav_expense">Expense</string>
    <string name="nav_categories">Categories</string>
    <string name="nav_add">Add</string>
    <string name="nav_year">Year</string>
    <string name="nav_credit_cards">Credit Cards</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_back">Back</string>
    <string name="nav_close">Close</string>
    <string name="nav_edit">Edit</string>
    <string name="action_next_month">Next month.</string>
    <string name="action_prev_month">Previous month.</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_archive">Archive</string>
    <string name="action_in">In</string>
    <string name="action_out">Out</string>
    <string name="action_transfer">Transfer</string>
    <string name="hint_account_nickname">Account nickname</string>
    <string name="hint_card_nickname">Card nickname</string>
    <string name="hint_category_name">Category name</string>
    <string name="hint_color">Color</string>
    <string name="hint_icon">Icon</string>
    <string name="hint_amount">0.0 (amount in decimals)</string>
    <string name="hint_description">Description</string>
    <string name="hint_today">Today</string>
    <string name="hint_payment_method">Payment Method</string>
    <string name="label_billing_month">Billing month:</string>
    <string name="label_paid">Paid</string>
    <string name="label_not_paid">Not paid</string>
    <string name="label_edit_all">Edit all parcels</string>
    <string name="label_repeat">Repeat</string>
    <string name="desc_increase">Increase</string>
    <string name="desc_decrease">Decrease</string>
    <string name="title_transfer">Transfer</string>
    <string name="title_expense">Expense</string>
    <string name="title_income">Income</string>
    <string name="msg_pending">You have 0 outstanding payments.</string>
    <string name="msg_pending_part1">You have</string>
    <string name="msg_pending_part2">outstanding payment.</string>
    <string name="msg_pending_part2_plural">outstanding payments.</string>
    <string name="msg_progress">You used 0% of your budget.</string>
    <string name="msg_progress_part1">You used</string>
    <string name="msg_progress_part2">of your budget.</string>
    <string name="label_month">Balance</string>
    <string name="label_income">Income</string>
    <string name="label_expenses">Expense</string>
    <string name="label_accounts_overview">Accounts overview</string>
    <string name="label_categories_income">Income Categories</string>
    <string name="label_categories_expense">Expense Categories</string>
    <string name="label_year">Year</string>
    <string name="desc_year_bar_chart">A bar chart with the income and expense of each month.</string>
    <string name="label_accumulated">Accumulated</string>
    <string name="label_today">Today</string>
    <string name="action_edit">Edit</string>
    <string name="label_transfer_from">Transfer from</string>
    <string name="label_transfer_to">Transfer to</string>
    <string name="label_due">Due:</string>
    <string name="label_paid2">Paid:</string>
    <string name="msg_deleting_all_parcels">Deleting all parcels…</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_add_account">Add Account</string>
    <string name="title_edit_account">Edit Account</string>
    <string name="desc_add_account">Add new account.</string>
    <string name="action_biometric_lock">Biometric Lock</string>
    <string name="action_dark_mode">Dark mode</string>
    <string name="action_menage_categories">Menage Categories</string>
    <string name="action_menage_cards">Menage Credit Cards</string>
    <string name="action_become_a_premium_user">Become a Premium User</string>
    <string name="action_support">Support</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_reset_database">Reset Database</string>
    <string name="title_categories_list">Categories</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_edit_category">Edit Category</string>
    <string name="desc_add_category">Add new category.</string>
    <string name="desc_categories_tabs">Categories tabs</string>
    <string name="title_expenses">Expenses</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="credit_card">Credit Card</string>
    <string name="title_add_card">Add Credit Card</string>
    <string name="title_edit_card">Edit Credit Card</string>
    <string name="label_billing_day">Billing day:</string>
    <string name="title_pending">Pending</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Continue</string>
    <string name="desc_amount">Amount</string>
    <string name="progress_msg_delete">Deleting item…</string>
    <string name="msg_archive_account">Do you want to permanently archive this account? You will not have access to it anymore, but the items related to it will not be affected.</string>
    <string name="msg_archive_default">Do you want to permanently archive this item?</string>
    <string name="msg_archive_category">Do you want to permanently archive this category? You will not have access to it anymore, but the items related to it will not be affected.</string>
    <string name="msg_archive_credit_card">Would you like to permanently archive this credit card? You will not have access to it anymore, but the items related to it will not be affected.</string>
    <string name="msg_clear_database">This will delete everything you stored on this application\'s database. Are you sure you want to proceed?</string>
    <string name="msg_item_click">Click on the items to see details.</string>
    <string name="desc_see_more">See more</string>
    <string name="label_paid_dots">Paid:</string>
</resources>