<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/account_item_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    style="@style/ClickableListItem">

    <ImageView
        android:id="@+id/item_account_icon"
        style="@style/IconNormal"
        android:layout_marginStart="@dimen/inner_space"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_account_balance" />

    <TextView
        android:id="@+id/item_account_name"
        style="@style/TextNormalEllipse"
        android:layout_marginStart="12dp"
        android:text="@string/account_checking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/item_account_total"
        app:layout_constraintStart_toEndOf="@+id/item_account_icon"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/item_account_total"
        style="@style/CurrencySpace"
        android:layout_marginEnd="@dimen/inner_space"
        android:text="@string/initial_value_no_symbol"
        android:textColor="@color/income"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_account_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/item_account_currency_symbol"
        style="@style/Currency"
        android:text="@string/currency_symbol"
        android:textColor="@color/income"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_account_total"
        app:layout_constraintStart_toStartOf="@id/item_account_total" />


</androidx.constraintlayout.widget.ConstraintLayout>