<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CategoriesActivity">

    <!-- Toolbar -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/categories_toolbar"
        style="@style/MainToolbar"
        android:background="@color/bg_01dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_toolbar_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/categories_toolbar_month"
                style="@style/ToolbarMonth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/categories_toolbar_year"
                style="@style/MySubtitle2"
                android:layout_marginStart="16dp"
                android:text="@string/initial_year"
                android:textColor="@color/high_emphasis_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/categories_prev_month"
                style="@style/IconButton"
                android:padding="10dp"
                android:contentDescription="@string/action_prev_month"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/categories_toolbar_month"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_app_navigate_before"/>

            <ImageButton
                android:id="@+id/categories_next_month"
                style="@style/IconButton"
                android:contentDescription="@string/action_next_month"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/categories_toolbar_month"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_app_navigate_next"/>

            <ImageButton
                android:id="@+id/categories_close_button"
                style="@style/ToolbarButton"
                android:contentDescription="@string/nav_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_24_close_300" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Tabs container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_tabs_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categories_toolbar">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/categories_tabs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:tabTextAppearance="@style/MyTabText"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="2dp"
            app:tabTextColor="@color/medium_emphasis_text"
            app:tabSelectedTextColor="@color/high_emphasis_text"
            android:background="@drawable/bg_toolbar"
            android:contentDescription="@string/desc_categories_tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/categories_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/nav_categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_tabs_container" />


</androidx.constraintlayout.widget.ConstraintLayout>