<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/toolbar_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CategoriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categories_tabs_container"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/categories_back_button"
            style="@style/IconButton"
            android:contentDescription="@string/nav_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_app_arrow_back" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/categories_tabs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_toolbar"
            android:contentDescription="@string/desc_categories_tabs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/categories_back_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/categories_view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/nav_categories"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categories_tabs_container" />

</androidx.constraintlayout.widget.ConstraintLayout>