<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/dialog_confirmation_icon"
        style="@style/IconNormal"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_app_archive"
        app:tint="@color/red" />

    <TextView
        android:id="@+id/dialog_confirmation_message"
        style="@style/TextNormal"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/msg_archive_default"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dialog_confirmation_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_confirmation_icon" />

    <Button
        android:id="@+id/dialog_confirmation_button"
        style="@style/TransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textAllCaps="true"
        android:fontFamily="@font/titillium_web_semi_bold"
        android:text="@string/action_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/dialog_confirmation_dismiss"
        style="@style/TransparentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/high_emphasis_text"
        android:textAllCaps="true"
        android:fontFamily="@font/titillium_web_semi_bold"
        android:text="@string/action_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialog_confirmation_button" />

</androidx.constraintlayout.widget.ConstraintLayout>